# crw

./: .dockerignore  .gitignore  .mailmap  .mcp.json  BENCHMARKS.md  CHANGELOG.md  CLA.md  COMPATIBILITY-firecrawl.md  COMPATIBILITY.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-MIT  Makefile  PROGRESS.md  README.md  README.zh-CN.md  RELEASE.md  ROADMAP.md  config.default.toml  config.docker.toml  config.stealth.toml  docker-compose.stealth.yml  docker-compose.yml  install.sh  release-please-config.json  server.json  smithery.yaml  test_api_pipeline.py
.claude-plugin/: marketplace.json  plugin.json
.clusterfuzzlite/: Dockerfile  build.sh
.codex-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.githooks/: pre-commit
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml
bench/: MAP_RECALL.md  POOL_BENCH.md  PREREG.md  README.md  adapters.py  answer.py  compare_pool_bench.py  diagnose_3way.py  map_recall.py  orchestrate.py  relevance.py  report.py  requirements.txt  (+7 more)
crates/crw-browse/: Cargo.toml  README.md
crates/crw-browse/src/: errors.rs  lib.rs  main.rs  response.rs  server.rs  session.rs  snapshot.rs
crates/crw-browse/src/tools/: click.rs  common.rs  console.rs  evaluate.rs  fill.rs  goto.rs  html.rs  mod.rs  network.rs  screenshot.rs  script.rs  storage.rs  text.rs  tree.rs  type_text.rs  wait.rs
crates/crw-browse/tests/: phase2_tools.rs  session_lifecycle.rs  walking_skeleton.rs
crates/crw-cli/: Cargo.toml  README.md
crates/crw-cli/src/: main.rs
crates/crw-cli/src/commands/: bench.rs  browse.rs  crawl.rs  map.rs  mcp.rs  mod.rs  scrape.rs  search.rs  serve.rs
crates/crw-cli/src/commands/setup/: browser.rs  cloud.rs  docker.rs  llm.rs  local.rs  mod.rs  searxng.rs  shell.rs  ui.rs  wizard.rs
crates/crw-core/: Cargo.toml  README.md
crates/crw-core/src/: config.rs  deadline.rs  error.rs  evidence.rs  lib.rs  mcp.rs  metrics.rs  research_types.rs  reserved_sem.rs  scrape_class.rs  types.rs  url_safety.rs
crates/crw-core/tests/: api_casing.rs  config_tests.rs  error_tests.rs  types_tests.rs
crates/crw-crawl/: Cargo.toml  README.md
crates/crw-crawl/benches/: map_url_filter.rs
crates/crw-crawl/src/: crawl.rs  extract_pool.rs  lib.rs  pdf.rs  robots.rs  single.rs  sitemap.rs  url_filter.rs  url_filter_data.rs
crates/crw-crawl/tests/: change_tracking_judge.rs  discover_concurrency.rs  discover_tests.rs  pdf_tests.rs  robots_tests.rs  sitemap_tests.rs
crates/crw-diff/: Cargo.toml
crates/crw-extract/: Cargo.toml  README.md
crates/crw-extract/examples/: check_prepend.rs
crates/crw-extract/src/: answer.rs  antibot.rs  basis.rs  chunking.rs  clean.rs  dom_features.rs  dom_util.rs  filter.rs  judge.rs  lib.rs  llm.rs  llm_gate.rs  markdown.rs  pdf.rs  plaintext.rs  pricing.rs  quality.rs  readability.rs  selector.rs  structured.rs  summary.rs  tables.rs  untrusted.rs
crates/crw-extract/tests/: adv_malformed.rs  adv_urls.rs  clean_tests.rs  extract_tests.rs  judge_tests.rs  markdown_tests.rs  pdf_tests.rs  plaintext_tests.rs  readability_tests.rs  reasoning_effort_tests.rs  structured_tests.rs
crates/crw-extract/tests/fixtures/listings/: card_grid.html  docs_toc.html  forum_thread.html  harada_table.html  pmc_references.html  roundup_with_island.html  smartcompany_homepage.html  wikipedia_article.html
crates/crw-mcp/: Cargo.toml  README.md
crates/crw-mcp-proto/: Cargo.toml
crates/crw-mcp-proto/src/: lib.rs
crates/crw-mcp/src/: browser.rs  main.rs  teardown.rs
crates/crw-monitor/: Cargo.toml
crates/crw-monitor/src/: runner.rs  scheduler.rs  webhook.rs
crates/crw-pdf/: Cargo.toml
crates/crw-pdf/src/: detector.rs  lib.rs  structure_tree.rs  text_utils.rs  tounicode.rs
crates/crw-pdf/src/extractor/: content_stream.rs  fonts.rs  layout.rs  mod.rs  xobjects.rs
crates/crw-pdf/src/markdown/: analysis.rs  classify.rs  convert.rs  mod.rs  preprocess.rs
crates/crw-pdf/src/tables/: detect_heuristic.rs  detect_lines.rs  detect_rects.rs  detect_struct.rs  format.rs  grid.rs  mod.rs
crates/crw-renderer/: Cargo.toml  README.md
crates/crw-renderer/src/: blocklist.rs  breaker.rs  browser.rs  browser_pool.rs  camoufox.rs  cdp.rs  cdp_conn.rs  cloak.rs  detector.rs  egress.rs  host_limiter.rs  http_only.rs  lib.rs  preference.rs  traits.rs
crates/crw-renderer/tests/: browser_pool_real_chrome.rs  browser_pool_spike.rs  cdp_polling_tests.rs  detector_tests.rs  egress_latch.rs  egress_latch_no_proxy.rs  egress_latch_proxy_block.rs  egress_latch_proxy_cf200.rs  egress_latch_scrape_budget.rs  http_only_tests.rs
crates/crw-search/: Cargo.toml
crates/crw-search/src/: client.rs  lib.rs  params.rs  rerank.rs  research.rs  structured.rs  transform.rs
crates/crw-search/tests/: rerank_tests.rs
crates/crw-server/: Cargo.toml  README.md
crates/crw-server/openapi/: openapi-3.0.json  openapi.json
crates/crw-server/src/: app.rs  diagnostics.rs  error.rs  lib.rs  main.rs  middleware.rs  monitor.rs  setup.rs  state.rs
crates/crw-server/src/routes/: batch.rs  breakers.rs  capabilities.rs  change_tracking.rs  crawl.rs  extract.rs  health.rs  kimi.rs  map.rs  mcp.rs  metrics.rs  mod.rs  openapi.rs  research.rs  scrape.rs  search.rs
crates/crw-server/src/routes/v1/: mod.rs
crates/crw-server/src/routes/v2/: adapters.rs  batch.rs  crawl.rs  extract.rs  formats.rs  map.rs  mod.rs  parse.rs  scrape.rs
crates/crw-server/tests/: api.rs  auth.rs  capabilities.rs  cdp_constants_test.rs  chaos.rs  deadline_auto_extend_test.rs  docker_config_hosts.rs  kimi_route.rs  map_filter.rs  mcp.rs  parse_tests.rs  search_enrichment_deadline.rs  search_route.rs  security.rs  v1_extract.rs  v2_api.rs  v2_render_js.rs
crates/crw-server/tests/fixtures/: issue-40-baseline.json  issue-40-shanzastore.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: html_to_markdown.rs
python/: README.md  pyproject.toml
python/src/crw/: __init__.py  __main__.py  _binary.py  _platform.py  client.py  exceptions.py
python/tests/: conftest.py  test_binary.py  test_client_integration.py  test_client_unit.py
(+374 files in other folders)
