[workspace]
members = [
    "crates/crw-core",
    "crates/crw-renderer",
    "crates/crw-extract",
    "crates/crw-crawl",
    "crates/crw-search",
    "crates/crw-server",
    "crates/crw-mcp",
    "crates/crw-mcp-proto",
    "crates/crw-browse",
    "crates/crw-cli",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/us/crw"
homepage = "https://us.github.io/crw"
keywords = ["web-scraper", "web-crawler", "firecrawl", "mcp", "llm"]
categories = ["web-programming", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "set-header"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "rustls", "gzip", "brotli", "deflate", "socks", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTML processing
lol_html = "2"
scraper = "0.25"
htmd = "0.5"
ego-tree = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
once_cell = "1"

# Text processing
regex = "1"

# Randomness
rand = "0.9"

# Async utilities
futures = "0.3"
dashmap = "6"

# WebSocket client (shared by crw-renderer and crw-browse)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

# JSON schema generation (used by rmcp #[tool] macro)
schemars = "1.0"

# Config
config = "0.15"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Metrics
prometheus = "0.13"

# Caching (host preferences)
moka = { version = "0.12", features = ["future"] }
publicsuffix = "2"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Unix process-group kill (browser teardown). Unix-only; already present
# transitively. Used by crw-renderer's BROWSER_PGIDS group-kill registry.
libc = "0.2"

# Compile-time perfect-hash sets (url_filter deny-lists)
phf = { version = "0.11", features = ["macros"] }

# Test dependencies
tokio-test = "0.4"
wiremock = "0.6"
axum-test = "19"
proptest = "1"
insta = { version = "1", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
