[package]
name = "crw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "crw — CLI tool for scraping URLs to markdown/JSON without a server"

[[bin]]
name = "crw"
path = "src/main.rs"

[dependencies]
crw-core = { path = "../crw-core", version = "0.2.2" }
crw-renderer = { path = "../crw-renderer", version = "0.2.2" }
crw-extract = { path = "../crw-extract", version = "0.2.2" }
crw-crawl = { path = "../crw-crawl", version = "0.2.2" }

tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
