[package]
name = "crw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types, config, and error handling for the CRW web scraper"

[dependencies]
crw-mcp-proto = { path = "../crw-mcp-proto", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
