[package]
name = "crw-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTML extraction and markdown conversion engine for the CRW web scraper"

[features]
default = ["pdf"]
pdf = ["dep:crw-pdf"]

[dependencies]
crw-core = { path = "../crw-core", version = "0.4.0" }
crw-pdf = { workspace = true, optional = true }
lol_html = { workspace = true }
scraper = { workspace = true }
htmd = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
jsonschema = "0.28"
sxd-xpath = "0.4"
sxd-document = "0.3"
sxd_html = "0.1"
