[package]
name = "crw-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTML extraction and markdown conversion engine for the CRW web scraper"

[dependencies]
crw-core = { path = "../crw-core", version = "0.12.0" }
lol_html = { workspace = true }
scraper = { workspace = true }
htmd = { workspace = true }
ego-tree = { workspace = true }
xxhash-rust = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
jsonschema = "0.28"
sxd-xpath = "0.4"
sxd-document = "0.3"
sxd_html = "0.1"
phf = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
