[package]
name = "crw-mcp-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP JSON-RPC 2.0 protocol types (shared by crw-server, crw-mcp, crw-browse)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
