[package]
name = "crw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP (Model Context Protocol) server for the CRW web scraper"

[[bin]]
name = "crw-mcp"
path = "src/main.rs"

[features]
default = ["embedded"]
embedded = ["dep:crw-server"]

[dependencies]
crw-core = { path = "../crw-core", version = "0.5.0" }
crw-renderer = { path = "../crw-renderer", version = "0.5.0", features = ["auto-browser"] }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Embedded mode: pulls in full scraping engine
crw-server = { path = "../crw-server", version = "0.5.0", optional = true, features = ["cdp"] }
