[package]
name = "crw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP (Model Context Protocol) server for the CRW web scraper"

[[bin]]
name = "crw-mcp"
path = "src/main.rs"

[features]
default = ["embedded"]
embedded = ["dep:crw-server"]

[dependencies]
crw-core = { workspace = true }
crw-renderer = { workspace = true, features = ["auto-browser"] }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Embedded mode: pulls in full scraping engine
crw-server = { workspace = true, optional = true, features = ["cdp"] }
