[package]
name = "crw-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Optional self-host monitor mode for the CRW web scraper (SQLite-backed scheduler + diff + signed webhooks)"

[dependencies]
# Reused opencore primitives. `crw-diff` is the pure synchronous diff engine;
# `crw-crawl` provides the scrape/crawl primitives; `crw-extract` provides the
# LLM judge. None of these pull a DB dependency — the SQLite/cron/hmac stack is
# local to this crate and feature-gated, never compiled into the default server.
crw-core = { path = "../crw-core", version = "0.13.0" }
crw-diff = { path = "../crw-diff", version = "0.13.0" }
crw-crawl = { path = "../crw-crawl", version = "0.13.0" }
crw-extract = { path = "../crw-extract", version = "0.13.0" }
crw-renderer = { path = "../crw-renderer", version = "0.13.0" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

# Optional deps of THIS crate. They are pulled in only when `crw-monitor` is
# actually compiled (i.e. `crw-server --features monitor`), never in the default
# `crw-server` build. The `monitor` feature here turns them on; the crate has no
# always-on use of SQLite/HMAC so the default (featureless) build stays light.
rusqlite = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }

[features]
# Default ON for this crate so it is self-contained when used directly. The
# OPEN-CORE BOUNDARY is enforced at the `crw-server` level: `crw-server` depends
# on `crw-monitor` only behind its own `monitor` feature, so the default
# `crw-server` build never compiles this crate at all and never pulls
# rusqlite/hmac. See the §3.6 cargo-tree gate.
default = ["store", "webhook"]
store = ["dep:rusqlite"]
webhook = ["dep:hmac"]

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
