[package]
name = "crw-pdf"
version.workspace = true
edition = "2021"
autobins = false
authors = ["Firecrawl Team", "us"]
description = "Fast PDF inspection, classification, and text extraction — vendored from firecrawl/pdf-inspector"
license = "MIT"
repository = "https://github.com/us/crw"

[dependencies]
lopdf = { version = "0.40", features = ["rayon"] }
thiserror = "2.0"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
once_cell = "1.19"
unicode-normalization = "0.1"
ttf-parser = "0.25"
