[package]
name = "crw-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP and CDP browser rendering engine for the CRW web scraper"

[features]
default = []
cdp = ["tokio-tungstenite"]

[dependencies]
crw-core = { path = "../crw-core", version = "0.2.1" }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"], optional = true }
futures = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
rand = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
flate2 = "1"
brotli = "8"
